paginacion en pagina de listados busqueda por generos musicales

--- a/ArmaTuFecha/src/main/resources/templates/crear-perfil.html
+++ b/ArmaTuFecha/src/main/resources/templates/crear-perfil.html
@@ -327,95 +327,95 @@
 							</label><br> <label>Género 1:</label><select multiple
 								class="form-control" id="exampleFormControlSelect4"
 								name="genero1">
-								<option>Blues</option>
-								<option>Bossa Nova</option>
-								<option>Cancion</option>
-								<option>Country</option>
-								<option>Cumbia</option>
-								<option>Disco</option>
-								<option>Electrónica</option>
-								<option>Folklore</option>
-								<option>Folk</option>
-								<option>Funk</option>
-								<option>Free Jazz</option>
-								<option>Garage</option>
-								<option>Gospel</option>
-								<option>Grunge</option>
-								<option>Hardcore</option>
-								<option>Hard Rock</option>
-								<option>Heavy Metal</option>
-								<option>Hip Hop</option>
-								<option>House</option>
-								<option>Indie​</option>
-								<option>Jazz</option>​
-								<option>Pop</option>
-								<option>Punk</option>
-								<option>Post Punk</option>
-								<option>Rap</option>
-								<option>Reggae</option>
-								<option>Reggaeton</option>
-								<option>Rhythm and Blues (R&B)</option>
-								<option>Rock</option>
-								<option>Rockabilly</option>
-								<option>Rock Alternativo</option>
-								<option>Rock and Roll</option>
-								<option>Rock Stoner</option>
-								<option>Rock Progresivo</option>
-								<option>Salsa</option>
-								<option>Shoegaze</option>
-								<option>Ska</option>
-								<option>Soul</option>
-								<option>Swing</option>
-								<option>Tango</option>
-								<option>Trap</option>
-								<option>Trash Metal</option>
-								<option>Trip hop</option>
+								<option value="Blues" th:selected="${genero1} == 'Blues'">Blues</option>
+								<option value="Bossa Nova" th:selected="${genero1} == 'Bossa Nova'">Bossa Nova</option>
+								<option value="Cancion" th:selected="${genero1} == 'Cancion'">Cancion</option>
+								<option value="Country" th:selected="${genero1} == 'Country'">Country</option>
+								<option value="Cumbia" th:selected="${genero1} == 'Cumbia'">Cumbia</option>
+								<option value="Disco" th:selected="${genero1} == 'Disco'">Disco</option>
+								<option value="Electrónica" th:selected="${genero1} == 'Electrónica'">Electrónica</option>
+								<option value="Folklore" th:selected="${genero1} == 'Folklore'">Folklore</option>
+								<option value="Folk" th:selected="${genero1} == 'Folk'">Folk</option>
+								<option value="Funk" th:selected="${genero1} == 'Funk'">Funk</option>
+								<option value="Free Jazz" th:selected="${genero1} == 'Free Jazz'">Free Jazz</option>
+								<option value="Garage" th:selected="${genero1} == 'Garage'">Garage</option>
+								<option value="Gospel" th:selected="${genero1} == 'Gospel'">Gospel</option>
+								<option value="Grunge" th:selected="${genero1} == 'Grunge'">Grunge</option>
+								<option value="Hardcore" th:selected="${genero1} == 'Hardcore'">Hardcore</option>
+								<option value="Hard Rock" th:selected="${genero1} == 'Hard Rock'">Hard Rock</option>
+								<option value="Heavy Metal" th:selected="${genero1} == 'Heavy Metal'">Heavy Metal</option>
+								<option value="Hip Hop" th:selected="${genero1} == 'Hip Hop'">Hip Hop</option>
+								<option value="House" th:selected="${genero1} == 'House'">House</option>
+								<option value="Indie" th:selected="${genero1} == 'Indie'">Indie​</option>
+								<option value="Jazz" th:selected="${genero1} == 'Jazz'">Jazz</option>​
+								<option value="Pop" th:selected="${genero1} == 'Pop'">Pop</option>
+								<option value="Punk" th:selected="${genero1} == 'Punk'">Punk</option>
+								<option value="Post Punk" th:selected="${genero1} == 'Post Punk'">Post Punk</option>
+								<option value="Rap" th:selected="${genero1} == 'Rap'">Rap</option>
+								<option value="Reggae" th:selected="${genero1} == 'Reggae'">Reggae</option>
+								<option value="Reggaeton" th:selected="${genero1} == 'Reggaeton'">Reggaeton</option>
+								<option value="Rhythm and Blues (R&B)" th:selected="${genero1} == 'Rhythm and Blues (R&B)'">Rhythm and Blues (R&B)</option>
+								<option value="Rock" th:selected="${genero1} == 'Rock'">Rock</option>
+								<option value="Rockabilly" th:selected="${genero1} == 'Rockabilly'">Rockabilly</option>
+								<option value="Rock Alternativo" th:selected="${genero1} == 'Rock Alternativo'">Rock Alternativo</option>
+								<option value="Rock and Roll" th:selected="${genero1} == 'Rock and Roll'">Rock and Roll</option>
+								<option value="Rock Stoner" th:selected="${genero1} == 'Rock Stoner'">Rock Stoner</option>
+								<option value="Rock Progresivo" th:selected="${genero1} == 'Rock Progresivo'">Rock Progresivo</option>
+								<option value="Salsa" th:selected="${genero1} == 'Salsa'">Salsa</option>
+								<option value="Shoegaze" th:selected="${genero1} == 'Shoegaze'">Shoegaze</option>
+								<option value="Ska" th:selected="${genero1} == 'Ska'">Ska</option>
+								<option value="Soul" th:selected="${genero1} == 'Soul'">Soul</option>
+								<option value="Swing" th:selected="${genero1} == 'Swing'">Swing</option>
+								<option value="Tango" th:selected="${genero1} == 'Tango'">Tango</option>
+								<option value="Trap" th:selected="${genero1} == 'Trap'">Trap</option>
+								<option value="Trash Metal" th:selected="${genero1} == 'Trash Metal'">Trash Metal</option>
+								<option value="Trip hop" th:selected="${genero1} == 'Trip hop'">Trip hop</option>
 
 							</select><br> <label>Género 2:</label><select multiple class="form-control"
 								id="exampleFormControlSelect5" name="genero2">
-								<option>Blues</option>
-								<option>Bossa Nova</option>
-								<option>Cancion</option>
-								<option>Country</option>
-								<option>Cumbia</option>
-								<option>Disco</option>
-								<option>Electrónica</option>
-								<option>Folklore</option>
-								<option>Folk</option>
-								<option>Funk</option>
-								<option>Free Jazz</option>
-								<option>Garage</option>
-								<option>Gospel</option>
-								<option>Grunge</option>
-								<option>Hardcore</option>
-								<option>Hard Rock</option>
-								<option>Heavy Metal</option>
-								<option>Hip Hop</option>
-								<option>House</option>
-								<option>Indie​</option>
-								<option>Jazz</option>​
-								<option>Pop</option>
-								<option>Punk</option>
-								<option>Post Punk</option>
-								<option>Rap</option>
-								<option>Reggae</option>
-								<option>Reggaeton</option>
-								<option>Rhythm and Blues (R&B)</option>
-								<option>Rock</option>
-								<option>Rockabilly</option>
-								<option>Rock Alternativo</option>
-								<option>Rock and Roll</option>
-								<option>Rock Stoner</option>
-								<option>Rock Progresivo</option>
-								<option>Salsa</option>
-								<option>Shoegaze</option>
-								<option>Ska</option>
-								<option>Soul</option>
-								<option>Swing</option>
-								<option>Tango</option>
-								<option>Trap</option>
-								<option>Trash Metal</option>
-								<option>Trip hop</option>
+								<option value="Blues" th:selected="${genero2} == 'Blues'">Blues</option>
+								<option value="Bossa Nova" th:selected="${genero2} == 'Bossa Nova'">Bossa Nova</option>
+								<option value="Cancion" th:selected="${genero2} == 'Cancion'">Cancion</option>
+								<option value="Country" th:selected="${genero2} == 'Country'">Country</option>
+								<option value="Cumbia" th:selected="${genero2} == 'Cumbia'">Cumbia</option>
+								<option value="Disco" th:selected="${genero2} == 'Disco'">Disco</option>
+								<option value="Electrónica" th:selected="${genero2} == 'Electrónica'">Electrónica</option>
+								<option value="Folklore" th:selected="${genero2} == 'Folklore'">Folklore</option>
+								<option value="Folk" th:selected="${genero2} == 'Folk'">Folk</option>
+								<option value="Funk" th:selected="${genero2} == 'Funk'">Funk</option>
+								<option value="Free Jazz" th:selected="${genero2} == 'Free Jazz'">Free Jazz</option>
+								<option value="Garage" th:selected="${genero2} == 'Garage'">Garage</option>
+								<option value="Gospel" th:selected="${genero2} == 'Gospel'">Gospel</option>
+								<option value="Grunge" th:selected="${genero2} == 'Grunge'">Grunge</option>
+								<option value="Hardcore" th:selected="${genero2} == 'Hardcore'">Hardcore</option>
+								<option value="Hard Rock" th:selected="${genero2} == 'Hard Rock'">Hard Rock</option>
+								<option value="Heavy Metal" th:selected="${genero2} == 'Heavy Metal'">Heavy Metal</option>
+								<option value="Hip Hop" th:selected="${genero2} == 'Hip Hop'">Hip Hop</option>
+								<option value="House" th:selected="${genero2} == 'House'">House</option>
+								<option value="Indie" th:selected="${genero2} == 'Indie'">Indie​</option>
+								<option value="Jazz" th:selected="${genero2} == 'Jazz'">Jazz</option>​
+								<option value="Pop" th:selected="${genero2} == 'Pop'">Pop</option>
+								<option value="Punk" th:selected="${genero2} == 'Punk'">Punk</option>
+								<option value="Post Punk" th:selected="${genero2} == 'Post Punk'">Post Punk</option>
+								<option value="Rap" th:selected="${genero2} == 'Rap'">Rap</option>
+								<option value="Reggae" th:selected="${genero2} == 'Reggae'">Reggae</option>
+								<option value="Reggaeton" th:selected="${genero2} == 'Reggaeton'">Reggaeton</option>
+								<option value="Rhythm and Blues (R&B)" th:selected="${genero2} == 'Rhythm and Blues (R&B)'">Rhythm and Blues (R&B)</option>
+								<option value="Rock" th:selected="${genero2} == 'Rock'">Rock</option>
+								<option value="Rockabilly" th:selected="${genero2} == 'Rockabilly'">Rockabilly</option>
+								<option value="Rock Alternativo" th:selected="${genero2} == 'Rock Alternativo'">Rock Alternativo</option>
+								<option value="Rock and Roll" th:selected="${genero2} == 'Rock and Roll'">Rock and Roll</option>
+								<option value="Rock Stoner" th:selected="${genero2} == 'Rock Stoner'">Rock Stoner</option>
+								<option value="Rock Progresivo" th:selected="${genero2} == 'Rock Progresivo'">Rock Progresivo</option>
+								<option value="Salsa" th:selected="${genero2} == 'Salsa'">Salsa</option>
+								<option value="Shoegaze" th:selected="${genero2} == 'Shoegaze'">Shoegaze</option>
+								<option value="Ska" th:selected="${genero2} == 'Ska'">Ska</option>
+								<option value="Soul" th:selected="${genero2} == 'Soul'">Soul</option>
+								<option value="Swing" th:selected="${genero2} == 'Swing'">Swing</option>
+								<option value="Tango" th:selected="${genero2} == 'Tango'">Tango</option>
+								<option value="Trap" th:selected="${genero2} == 'Trap'">Trap</option>
+								<option value="Trash Metal" th:selected="${genero2} == 'Trash Metal'">Trash Metal</option>
+								<option value="Trip hop" th:selected="${genero2} == 'Trip hop'">Trip hop</option>
 
 							</select> <br>
 							<br>
