--- a/ArmaTuFecha/src/main/resources/templates/estructura-listado.html
+++ b/ArmaTuFecha/src/main/resources/templates/estructura-listado.html
@@ -66,9 +66,9 @@
 	<!-- /.row -->
 
 	<!-- Pagination -->
-	<ul class="pagination justify-content-center" layout:fragment="paginacion">
+	<div class="pagination justify-content-center" layout:fragment="paginacion">
 		
-	</ul>
+	</div>
  
 
 	<!-- /.container -->
