--- a/ArmaTuFecha/src/main/resources/templates/listado-locales.html
+++ b/ArmaTuFecha/src/main/resources/templates/listado-locales.html
@@ -59,7 +59,7 @@
 						</div>
 						<div class="col-md-4">
 							<form class="form-group"
-								action="/locales/busqueda-provincia/procesar">
+								action="'/locales/busqueda-provincia/procesar/1'">
 								<div class="col text-center">
 									<input name="busquedaProvincia" type="text"
 										class="form-control" placeholder="Buscá por provincia..."></input><br>
@@ -72,7 +72,7 @@
 						</div>
 						<div class="col-md-4">
 							<form class="form-group"
-								action="/locales/busqueda-localidad/procesar">
+								action="/locales/busqueda-localidad/procesar/1">
 								<div class="col text-center">
 									<input name="busquedaLocalidad" type="text"
 										class="form-control" placeholder="Buscá por localidad..."></input><br>
@@ -118,20 +118,20 @@
 	<!-- /.row -->
 
 	<!-- Pagination -->
-	hola
-	<ul class="pagination justify-content-center" layout:fragment="paginacion">
-		<li class="page-item"><a class="page-link" href="#"
+  <div layout:fragment="paginacion">
+	<ul class="pagination justify-content-center">
+		<li class="page-item"><a class="page-link" th:href="${pagina-1}"
 			aria-label="Previous"> <span aria-hidden="true">&laquo;</span> <span
 				class="sr-only">Previous</span>
 		</a></li>
-		<li th:each="perfilLocal, iterador:${listadoLocales}" class="page-item"><a th:text="${iterador.index}"  class="page-link"  th:href="'/listado-locales/' + ${iterador.index}">1</a></li>
+		<li th:each="i:${#numbers.sequence(1, ( listadoLocales.size () / 2 ) + 2  )}" class="page-item"><a   class="page-link"  th:text="${i}" th:href="'/listado-locales/' + ${i}">1</a></li>
 		
-		<li class="page-item"><a class="page-link" href="#"
+		<li class="page-item"><a class="page-link" th:href="${pagina+1}"
 			aria-label="Next"> <span aria-hidden="true">&raquo;</span> <span
 				class="sr-only">Next</span>
 		</a></li>
 	</ul>
-
+</div>
 
 	<!-- /.container -->
 
