--- a/ArmaTuFecha/src/main/resources/templates/listado-musicos.html
+++ b/ArmaTuFecha/src/main/resources/templates/listado-musicos.html
@@ -44,12 +44,12 @@
 					<h5>Buscar por..</h5>
 					<br>
 					<div class="row">
-						<div class="col-md-4">
+						<div class="col-md-3">
 							<form class="form-group"
 								action="/musicos/busqueda-nombre/procesar">
 								<div class="col text-center">
 									<input name="busquedaNombre" type="text" class="form-control"
-										placeholder="Buscá un lugar por su nombre..."></input><br>
+										placeholder="Nombre de la banda..."></input><br>
 								</div>
 								<div class="col text-center">
 									<input class="btn btn-outline-dark" type="submit"
@@ -57,9 +57,9 @@
 								</div>
 							</form>
 						</div>
-						<div class="col-md-4">
+						<div class="col-md-3">
 							<form class="form-group"
-								action="/musicos/busqueda-provincia/procesar">
+								action="/musicos/busqueda-provincia/procesar/1">
 								<div class="col text-center">
 									<input name="busquedaProvincia" type="text"
 										class="form-control" placeholder="Buscá por provincia..."></input><br>
@@ -70,9 +70,9 @@
 								</div>
 							</form>
 						</div>
-						<div class="col-md-4">
+						<div class="col-md-3">
 							<form class="form-group"
-								action="/musicos/busqueda-localidad/procesar">
+								action="/musicos/busqueda-localidad/procesar/1">
 								<div class="col text-center">
 									<input name="busquedaLocalidad" type="text"
 										class="form-control" placeholder="Buscá por localidad..."></input><br>
@@ -81,6 +81,62 @@
 									<input class="btn btn-outline-dark" type="submit"
 										value="Buscar"></input>
 								</div>
+							</form>
+						</div>
+						<div class="col-md-3">
+							<form class="form-group" action="/musicos/busqueda-genero/procesar/1">
+								<select multiple
+								class="form-control" id="exampleFormControlSelect4"
+								name="busquedaGenero">
+								<option value="Blues" th:selected="${busquedaGenero} == 'Blues'">Blues</option>
+								<option value="Bossa Nova" th:selected="${busquedaGenero} == 'Bossa Nova'">Bossa Nova</option>
+								<option value="Cancion" th:selected="${busquedaGenero} == 'Cancion'">Cancion</option>
+								<option value="Country" th:selected="${busquedaGenero} == 'Country'">Country</option>
+								<option value="Cumbia" th:selected="${busquedaGenero} == 'Cumbia'">Cumbia</option>
+								<option value="Disco" th:selected="${busquedaGenero} == 'Disco'">Disco</option>
+								<option value="Electrónica" th:selected="${busquedaGenero} == 'Electrónica'">Electrónica</option>
+								<option value="Folklore" th:selected="${busquedaGenero} == 'Folklore'">Folklore</option>
+								<option value="Folk" th:selected="${busquedaGenero} == 'Folk'">Folk</option>
+								<option value="Funk" th:selected="${busquedaGenero} == 'Funk'">Funk</option>
+								<option value="Free Jazz" th:selected="${busquedaGenero} == 'Free Jazz'">Free Jazz</option>
+								<option value="Garage" th:selected="${busquedaGenero} == 'Garage'">Garage</option>
+								<option value="Gospel" th:selected="${busquedaGenero} == 'Gospel'">Gospel</option>
+								<option value="Grunge" th:selected="${busquedaGenero} == 'Grunge'">Grunge</option>
+								<option value="Hardcore" th:selected="${busquedaGenero} == 'Hardcore'">Hardcore</option>
+								<option value="Hard Rock" th:selected="${busquedaGenero} == 'Hard Rock'">Hard Rock</option>
+								<option value="Heavy Metal" th:selected="${busquedaGenero} == 'Heavy Metal'">Heavy Metal</option>
+								<option value="Hip Hop" th:selected="${busquedaGenero} == 'Hip Hop'">Hip Hop</option>
+								<option value="House" th:selected="${busquedaGenero} == 'House'">House</option>
+								<option value="Indie" th:selected="${busquedaGenero} == 'Indie'">Indie​</option>
+								<option value="Jazz" th:selected="${busquedaGenero} == 'Jazz'">Jazz</option>​
+								<option value="Pop" th:selected="${busquedaGenero} == 'Pop'">Pop</option>
+								<option value="Punk" th:selected="${busquedaGenero} == 'Punk'">Punk</option>
+								<option value="Post Punk" th:selected="${busquedaGenero} == 'Post Punk'">Post Punk</option>
+								<option value="Rap" th:selected="${busquedaGenero} == 'Rap'">Rap</option>
+								<option value="Reggae" th:selected="${busquedaGenero} == 'Reggae'">Reggae</option>
+								<option value="Reggaeton" th:selected="${busquedaGenero} == 'Reggaeton'">Reggaeton</option>
+								<option value="Rhythm and Blues (R&B)" th:selected="${busquedaGenero} == 'Rhythm and Blues (R&B)'">Rhythm and Blues (R&B)</option>
+								<option value="Rock" th:selected="${busquedaGenero} == 'Rock'">Rock</option>
+								<option value="Rockabilly" th:selected="${busquedaGenero} == 'Rockabilly'">Rockabilly</option>
+								<option value="Rock Alternativo" th:selected="${busquedaGenero} == 'Rock Alternativo'">Rock Alternativo</option>
+								<option value="Rock and Roll" th:selected="${busquedaGenero} == 'Rock and Roll'">Rock and Roll</option>
+								<option value="Rock Stoner" th:selected="${busquedaGenero} == 'Rock Stoner'">Rock Stoner</option>
+								<option value="Rock Progresivo" th:selected="${busquedaGenero} == 'Rock Progresivo'">Rock Progresivo</option>
+								<option value="Salsa" th:selected="${busquedaGenero} == 'Salsa'">Salsa</option>
+								<option value="Shoegaze" th:selected="${busquedaGenero} == 'Shoegaze'">Shoegaze</option>
+								<option value="Ska" th:selected="${busquedaGenero} == 'Ska'">Ska</option>
+								<option value="Soul" th:selected="${busquedaGenero} == 'Soul'">Soul</option>
+								<option value="Swing" th:selected="${busquedaGenero} == 'Swing'">Swing</option>
+								<option value="Tango" th:selected="${busquedaGenero} == 'Tango'">Tango</option>
+								<option value="Trap" th:selected="${busquedaGenero} == 'Trap'">Trap</option>
+								<option value="Trash Metal" th:selected="${busquedaGenero} == 'Trash Metal'">Trash Metal</option>
+								<option value="Trip hop" th:selected="${busquedaGenero} == 'Trip hop'">Trip hop</option>
+
+							</select><br>
+							<div class="col text-center">
+									<input class="btn btn-outline-dark" type="submit"
+										value="Buscar"></input>
+							</div>
 							</form>
 						</div>
 					</div>
@@ -121,7 +177,18 @@
 	<!-- /.row -->
 
 	<!-- Pagination -->
-
+	<ul class="pagination justify-content-center" layout:fragment="paginacion">
+		<li class="page-item"><a class="page-link" th:href="${pagina-1}"
+			aria-label="Previous"> <span aria-hidden="true">&laquo;</span> <span
+				class="sr-only">Previous</span>
+		</a></li>
+		<li th:each="i:${#numbers.sequence(1, ( listadoMusicos.size () / 2 ) + 2  )}" class="page-item"><a   class="page-link"  th:text="${i}" th:href="'/listado-musicos/' + ${i}">1</a></li>
+		
+		<li class="page-item"><a class="page-link" th:href="${pagina+1}"
+			aria-label="Next"> <span aria-hidden="true">&raquo;</span> <span
+				class="sr-only">Next</span>
+		</a></li>
+	</ul>
 
 	<!-- /.container -->
 
