--- a/ArmaTuFecha/src/main/resources/templates/resultado-busqueda-locales-localidad.html
+++ b/ArmaTuFecha/src/main/resources/templates/resultado-busqueda-locales-localidad.html
@@ -85,20 +85,13 @@
 	<!-- /.row -->
 
 	<!-- Pagination -->
-	<ul class="pagination justify-content-center">
-		<li class="page-item"><a class="page-link" href="#"
-			aria-label="Previous"> <span aria-hidden="true">&laquo;</span> <span
-				class="sr-only">Previous</span>
-		</a></li>
-		<li class="page-item"><a class="page-link" href="#">1</a></li>
-		<li class="page-item"><a class="page-link" href="#">2</a></li>
-		<li class="page-item"><a class="page-link" href="#">3</a></li>
-		<li class="page-item"><a class="page-link" href="#"
-			aria-label="Next"> <span aria-hidden="true">&raquo;</span> <span
-				class="sr-only">Next</span>
-		</a></li>
-	</ul>
+	<div class="pagination justify-content-center"
+		layout:fragment="paginacion">
 
+		<button class="btn btn-outline-dark btn-lg">
+			<a th:href="'/locales/busqueda-localidad/procesar/'+ ${pagina+1} + '?busquedaLocalidad=' + ${busquedaLocalidad}">Más resultados </a>
+		</button>
+	</div>
 
 	<!-- /.container -->
 
