--- a/ArmaTuFecha/src/main/resources/templates/resultado-busqueda-locales-provincia.html
+++ b/ArmaTuFecha/src/main/resources/templates/resultado-busqueda-locales-provincia.html
@@ -57,16 +57,18 @@
 						</div>
 						<div class="col-md-6">
 							<form class="form-group"
-								action="/locales/busqueda-localidad/procesar">
+								action="/locales/busqueda-localidad/procesar/1">
 								<div class="col text-center">
 									<input name="busquedaLocalidad" type="text"
 										class="form-control" placeholder="Buscá por localidad..."></input><br>
 								</div>
+								
 								<div class="col text-center">
 									<input class="btn btn-outline-dark" type="submit"
 										value="Buscar"></input>
 								</div>
 							</form>
+						
 						</div>
 					</div>
 				</div>
@@ -98,24 +100,21 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		
+	</div>
+			
+	
 	</section>
 	<!-- /.row -->
 
-	<!-- Pagination -->
-	<ul class="pagination justify-content-center">
-		<li class="page-item"><a class="page-link" href="#"
-			aria-label="Previous"> <span aria-hidden="true">&laquo;</span> <span
-				class="sr-only">Previous</span>
-		</a></li>
-		<li class="page-item"><a class="page-link" href="#">1</a></li>
-		<li class="page-item"><a class="page-link" href="#">2</a></li>
-		<li class="page-item"><a class="page-link" href="#">3</a></li>
-		<li class="page-item"><a class="page-link" href="#"
-			aria-label="Next"> <span aria-hidden="true">&raquo;</span> <span
-				class="sr-only">Next</span>
-		</a></li>
-	</ul>
+	<!--hacer lo mismo en busqueda por localidad, y hacerlo en templates y rutas de busqueda de musicos  Pagination -->
+	<div class="pagination justify-content-center"
+		layout:fragment="paginacion">
+
+		<button class="btn btn-outline-dark btn-lg">
+			<a th:href="'/locales/busqueda-provincia/procesar/'+ ${pagina+1} + '?busquedaProvincia=' + ${busquedaProvincia}">Más resultados </a>
+		</button>
+	</div>
 
 
 	<!-- /.container -->
@@ -123,21 +122,7 @@
 	<!-- Footer -->
 	
 
-	<!-- Bootstrap core JavaScript -->
-	<script src="/vendor/jquery/jquery.min.js"></script>
-	<script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-	<!-- Bootstrap core JavaScript -->
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-		crossorigin="anonymous"></script>
-	<script
-		src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-		integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-		crossorigin="anonymous"></script>
-	<script
-		src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
-		integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
-		crossorigin="anonymous"></script>
+	
 
 </body>
 
