mejoras en fotos: agregada la opcion de "eliminar" fotos en el formulario de edicion de perfil (las fotos no se eliminan en cloudinary) corregido problema con edicion del nombre, ahora se ingresa tambien en la tabla usuarios prueba de corregir tamaño de col en pagina principal para mejorar vista desde celular

--- a/ArmaTuFecha/src/main/resources/static/css/estilos.css
+++ b/ArmaTuFecha/src/main/resources/static/css/estilos.css
@@ -47,9 +47,9 @@
 }
 
 .bootstrap-override-header3 {
-	height: 600px;
-	padding-top: 200px;
-
+	height:1200px;
+	padding-top: 150px;
+	padding-bottom: 600px;
 }
 
 
