--- a/ArmaTuFecha/src/main/resources/templates/editar-datos-usuario.html
+++ b/ArmaTuFecha/src/main/resources/templates/editar-datos-usuario.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es" layout:decorate="estructura-logueado">
+<html lang="es" layout:decorate="~{estructura-logueado}">
 
 <head>
 
@@ -20,7 +20,7 @@
 	<!-- Navigation -->
 
 	<header class="bg-primary text-white bootstrap-override-header"
-		id="color1" layout:fragment="header-logueado">
+		id="color1" layout:fragment="~{header-logueado}">
 		<div class="container text-center">
 			<div class="row">
 				<div class="col-12">
