--- a/ArmaTuFecha/src/main/resources/templates/resultado-busqueda-musicos-nombre.html
+++ b/ArmaTuFecha/src/main/resources/templates/resultado-busqueda-musicos-nombre.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es" layout:decorate="estructura-listado">
+<html lang="es" layout:decorate="~{estructura-listado}">
 
 <head>
 
@@ -19,7 +19,7 @@
 
 
 	<header class="bg-primary text-white bootstrap-override-header2"
-		id="color1" layout:fragment="header-listado">
+		id="color1" layout:fragment="~{header-listado}">
 		<div class="container text-center">
 			<div class="row">
 				<div class="col">
@@ -35,7 +35,7 @@
 	</header>
 	<!-- Page Content -->
 	<section id="about" class="bootstrap-override-section"
-		layout:fragment="seccion-listado">
+		layout:fragment="~{seccion-listado}">
 		<div class="container">
 
 			<!-- Page Heading -->
