--- a/ArmaTuFecha/src/main/resources/templates/estructura-listado.html
+++ b/ArmaTuFecha/src/main/resources/templates/estructura-listado.html
@@ -6,30 +6,23 @@
 <meta charset="utf-8"></meta>
 <meta name="viewport"
 	content="width=device-width, initial-scale=1, shrink-to-fit=no"></meta>
-
-
 <!-- Bootstrap core CSS -->
-<link rel="stylesheet"
-	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
-	integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
-	crossorigin="anonymous"></link>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"crossorigin="anonymous"></link>
+
 
 <!-- Custom styles for this template -->
-<link href="/css/3-col-portfolio.css" rel="stylesheet"></link>
-<link href="/css/scrolling-nav.css" rel="stylesheet"></link>
+<link rel="stylesheet" href="/css/scrolling-nav.css"></link>
+<link rel="stylesheet" href="/css/3-col-portfolio.css"></link>
 <link rel="stylesheet" type="text/css" href="/css/estilos.css"></link>
+
 <!-- Bootstrap core JavaScript -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-	integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-	crossorigin="anonymous"></script>
-<script
-	src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-	integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-	crossorigin="anonymous"></script>
-<script
-	src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
-	integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
-	crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+
+<!-- Custom JavaScript for this theme -->
+
+<script src="/js/scrolling-nav.js"></script>
 
 
 </head>
@@ -59,14 +52,14 @@
 	</nav>
 
 	<header class="bg-primary text-white bootstrap-override-header2"
-		id="color1" layout:fragment="header-listado"> </header>
+		id="color1" layout:fragment="~{header-listado}"> </header>
 	<!-- Page Content -->
 	<section id="about" class="bootstrap-override-section2"
-		layout:fragment="seccion-listado"></section>
+		layout:fragment="~{seccion-listado}"></section>
 	<!-- /.row -->
 
 	<!-- Pagination -->
-	<div class="pagination justify-content-center" layout:fragment="paginacion">
+	<div class="pagination justify-content-center" layout:fragment="~{paginacion}">
 		
 	</div>
  
