--- a/ArmaTuFecha/src/main/resources/templates/estructura-nologueado.html
+++ b/ArmaTuFecha/src/main/resources/templates/estructura-nologueado.html
@@ -4,44 +4,31 @@
 <head>
 
 <meta charset="utf-8"></meta>
-<meta name="viewport"
-	content="width=device-width, initial-scale=1, shrink-to-fit=no"></meta>
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"></meta>
 
 
 <title>Arma Tu Fecha</title>
 
 <!-- Bootstrap core CSS -->
-<link rel="stylesheet"
-	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
-	integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
-	crossorigin="anonymous"></link>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"crossorigin="anonymous"></link>
 
 
 <!-- Custom styles for this template -->
-<link href="/css/scrolling-nav.css" rel="stylesheet"></link>
+<link rel="stylesheet" href="/css/scrolling-nav.css"></link>
 <link rel="stylesheet" type="text/css" href="/css/estilos.css"></link>
 
 <!-- Bootstrap core JavaScript -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-	integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-	crossorigin="anonymous"></script>
-<script
-	src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-	integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-	crossorigin="anonymous"></script>
-<script
-	src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
-	integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
-	crossorigin="anonymous"></script>
-
-<!-- Plugin JavaScript -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.compatibility.min.js.map"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 
 <!-- Custom JavaScript for this theme -->
-<script src="/js/scrolling-nav.js"></script>
 
+<script src="/js/scrolling-nav.js"></script>
 <script src="/js/formulario.js"></script>
 <script src="/js/validacionform.js"></script>
+
+
 
 </head>
 
@@ -70,9 +57,9 @@
 	</nav>
 
 	<header class="bg-primary text-white" id="color1"
-		layout:fragment="header1"> </header>
+		layout:fragment="~{header1}"> </header>
 
-	<section id="about" layout:fragment="section1"></section>
+	<section id="about" layout:fragment="~{section1}"></section>
 
 	<!-- Footer -->
 	<footer class="py-5 bg-dark">
@@ -83,7 +70,9 @@
 		<!-- /.container -->
 	</footer>
 
-
+<script src="//widget.cloudinary.com/global/all.js" type="text/javascript"></script>  
+<script src='//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
+<script src="/js/cloudinary.js"></script> 
 </body>
 
 
