--- a/ArmaTuFecha/src/main/resources/templates/listado-locales.html
+++ b/ArmaTuFecha/src/main/resources/templates/listado-locales.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es" layout:decorate="estructura-listado">
+<html lang="es" layout:decorate="~{estructura-listado}">
 
 <head>
 
@@ -20,7 +20,7 @@
 	
 
 	<header class="bg-primary text-white bootstrap-override-header2"
-		id="color1" layout:fragment="header-listado">
+		id="color1" layout:fragment="~{header-listado}">
 		<div class="container text-center">
 			<div class="row">
 				<div class="col">
@@ -37,7 +37,7 @@
 		
 	</header>
 	<!-- Page Content -->
-	<section id="about" class="bootstrap-override-section2" layout:fragment="seccion-listado">
+	<section id="about" class="bootstrap-override-section2" layout:fragment="~{seccion-listado}">
 		<div class="container">
 			<div class="row">
 				<div class="col text-center" id="bootstrap-override-col3">
@@ -59,7 +59,7 @@
 						</div>
 						<div class="col-md-4">
 							<form class="form-group"
-								action="'/locales/busqueda-provincia/procesar/1'">
+								action="/locales/busqueda-provincia/procesar/1">
 								<div class="col text-center">
 									<input name="busquedaProvincia" type="text"
 										class="form-control" placeholder="Buscá por provincia..."></input><br>
@@ -118,7 +118,7 @@
 	<!-- /.row -->
 
 	<!-- Pagination -->
-  <div layout:fragment="paginacion">
+  <div layout:fragment="~{paginacion}">
 	<ul class="pagination justify-content-center">
 		<li class="page-item"><a class="page-link" th:href="${pagina-1}"
 			aria-label="Previous"> <span aria-hidden="true">&laquo;</span> <span
