--- a/ArmaTuFecha/src/main/resources/templates/login.html
+++ b/ArmaTuFecha/src/main/resources/templates/login.html
@@ -11,14 +11,23 @@
 <title>Login</title>
 
 <!-- Bootstrap core CSS -->
-<link rel="stylesheet"
-	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
-	integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
-	crossorigin="anonymous"></link>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"crossorigin="anonymous"></link>
+
 
 <!-- Custom styles for this template -->
-<link href="/css/scrolling-nav.css" rel="stylesheet"></link>
+<link rel="stylesheet" href="/css/scrolling-nav.css"></link>
 <link rel="stylesheet" type="text/css" href="/css/estilos.css"></link>
+
+<!-- Bootstrap core JavaScript -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+
+<!-- Custom JavaScript for this theme -->
+
+<script src="/js/scrolling-nav.js"></script>
+<script src="/js/formulario.js"></script>
+<script src="/js/validacionform.js"></script>
 </head>
 
 <body id="page-top">
@@ -45,14 +54,17 @@
 		</div>
 	</nav>
 
-	<header class="bg-primary text-white" id="color1">
+	<header class="bg-primary text-white bootstrap-override-header3" id="color1">
 		<div class="container text-center">
 			<div class="row">
 				<div class="col-12">
 					<h1 th:text="${mensaje_bienvenida}"></h1>
 					<h1>Log in</h1>
 					<h4 th:text="${login_incorrecto}"></h4>
-					<h4 th:text="${mensaje_contrasenia}"></h4>					
+					<h4 th:text="${aviso_mail}"></h4>	
+					<h4 th:text="${mensaje_contrasenia}"></h4>
+					<h4 th:text="${mensaje_contrasenia2}"></h4>	
+					<h4 th:text="${mensaje_contrasenia3}"></h4>				
 				</div>
 			</div>
 			<form class="form-group" action="/procesar-login" method="POST">
@@ -67,11 +79,11 @@
 						type="password" name="contrasenia"></input>
 				</div>
 				<div>
-					<input class="btn btn-outline-light" type="submit"
-						value="Iniciar Sesión"></input><br>
+					<input class="btn btn-outline-light btn-lg" type="submit"
+						value="Iniciar Sesión"></input><br><br>
 				</div>
 				<div>
-					<a th:href="'/recuperar-contraseña/' + ${mail}">Olvidé mi contraseña</a>
+					<input type="button" class="btn btn-outline-light" th:href="'/recuperar-contraseña/' + ${mail}" value="Olvide mi contraseña"></input>
 				</div>
 			</form>
 		</div>
@@ -88,23 +100,7 @@
 	<!-- Footer -->
 
 
-	<!-- Bootstrap core JavaScript -->
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-		crossorigin="anonymous"></script>
-	<script
-		src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-		integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-		crossorigin="anonymous"></script>
-	<script
-		src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
-		integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
-		crossorigin="anonymous"></script>
-	<!-- Plugin JavaScript -->
-	<script src="/vendor/jquery-easing/jquery.easing.min.js"></script>
-
-	<!-- Custom JavaScript for this theme -->
-	<script src="/js/scrolling-nav.js"></script>
+	
 
 </body>
 
