--- a/ArmaTuFecha/src/main/resources/templates/logout.html
+++ b/ArmaTuFecha/src/main/resources/templates/logout.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es" layout:decorate="estructura-logueado">
+<html lang="es" layout:decorate="~{estructura-logueado}">
 
 <head>
 
@@ -19,7 +19,7 @@
 
 
 	<header class="bg-primary text-white bootstrap-override-header3"
-		id="color1" layout:fragment="header-logueado">
+		id="color1" layout:fragment="~{header-logueado}">
 		<div class="container text-center">
 			<div class="row">
 				<div class="col">
