--- a/ArmaTuFecha/src/main/resources/templates/resultado-busqueda-locales-nombre.html
+++ b/ArmaTuFecha/src/main/resources/templates/resultado-busqueda-locales-nombre.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es" layout:decorate="estructura-listado">
+<html lang="es" layout:decorate="~{estructura-listado}">
 
 <head>
 
@@ -19,7 +19,7 @@
 
 
 	<header class="bg-primary text-white bootstrap-override-header2"
-		id="color1" layout:fragment="header-listado">
+		id="color1" layout:fragment="~{header-listado}">
 		<div class="container text-center">
 			<div class="row">
 				<div class="col">
@@ -35,7 +35,7 @@
 	</header>
 	<!-- Page Content -->
 	<section id="about" class="bootstrap-override-section"
-		layout:fragment="seccion-listado">
+		layout:fragment="~{seccion-listado}">
 		<div class="container">
 
 			<!-- Page Heading -->
@@ -90,19 +90,7 @@
 	<!-- Footer -->
 	
 
-	<!-- Bootstrap core JavaScript -->
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-		crossorigin="anonymous"></script>
-	<script
-		src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-		integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-		crossorigin="anonymous"></script>
-	<script
-		src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
-		integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
-		crossorigin="anonymous"></script>
-
+	
 </body>
 
 </html>
