corregido problema de fragment

--- a/ArmaTuFecha/src/main/resources/templates/estructura-logueado.html
+++ b/ArmaTuFecha/src/main/resources/templates/estructura-logueado.html
@@ -54,7 +54,7 @@
 	</nav>
 
 	<header class="bg-primary text-white bootstrap-override-header"
-		id="color1" layout:fragment="header-logueado"> </header>
+		id="color1" layout:fragment="~{header-logueado}"> </header>
 	<!-- Footer -->
 	<footer class="py-5 bg-dark">
 		<div class="container">
