--- a/ArmaTuFecha/src/main/resources/templates/perfil-musico-logueado.html
+++ b/ArmaTuFecha/src/main/resources/templates/perfil-musico-logueado.html
@@ -142,9 +142,8 @@
 						<br> <a th:href="${link_musica3}"
 							th:if="${link_musica3 != null && link_musica3 != ''}"
 							th:text="${link_musica3}">Otro</a><br>
-						<br> <a
-							th:href="'/' + ${nombre} + '/' + ${id_usuario} + '/mi-perfil/editar'">Editar
-							datos del perfil</a><br>
+						<br> <a	th:href="'/' + ${nombre} + '/' + ${id_usuario} + '/mi-perfil/editar'"
+						     class="btn btn-outline-dark">Editar datos del perfil</a><br>
 					</div>
 				</div>
 				<div class="row">
@@ -152,11 +151,10 @@
 						<h3 class="my-3">Datos de la cuenta</h3>
 						<label>Mail:&nbsp;</label><label th:text="${mail}"></label><br>
 						<label>Contraseña:&nbsp;</label><label th:text="${contrasenia}"></label><br>
-						<a
-							th:href="'/' + ${nombre} + '/' + ${id_usuario} + '/mi-perfil/editar-datos-usuario'">Editar
-							datos de usuario</a><br></br> <a
-							th:href="'/' + ${nombre} + '/' + ${id_usuario} + '/mi-perfil/eliminar-cuenta'">Eliminar
-							cuenta y perfil</a><br>
+						<a th:href="'/' + ${nombre} + '/' + ${id_usuario} + '/mi-perfil/editar-datos-usuario'"
+						   class="btn btn-outline-dark">Editar datos de usuario</a><br></br> 
+						 <a th:href="'/' + ${nombre} + '/' + ${id_usuario} + '/mi-perfil/eliminar-cuenta'"
+						    class="btn btn-outline-dark">Eliminar cuenta y perfil</a><br>
 						<br>
 					</div>
 				</div>
