--- a/ArmaTuFecha/src/main/resources/templates/recuperar-contrasenia.html
+++ b/ArmaTuFecha/src/main/resources/templates/recuperar-contrasenia.html
@@ -8,7 +8,7 @@
 	content="width=device-width, initial-scale=1, shrink-to-fit=no"></meta>
 
 
-<title>Login</title>
+<title>Recuperar contraseña</title>
 
 <!-- Bootstrap core CSS -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"crossorigin="anonymous"></link>
@@ -25,9 +25,9 @@
 
 <!-- Custom JavaScript for this theme -->
 
-<script type="text/javascript" src="/js/scrolling-nav.js"></script>
-<script type="text/javascript" src="/js/formulario.js"></script>
-<script type="text/javascript" src="/js/validacionform.js"></script>
+<script src="/js/scrolling-nav.js"></script>
+<script src="/js/formulario.js"></script>
+<script src="/js/validacionform.js"></script>
 </head>
 
 <body id="page-top">
@@ -58,32 +58,23 @@
 		<div class="container text-center">
 			<div class="row">
 				<div class="col-12">
-					<h1 th:text="${mensaje_bienvenida}"></h1>
-					<h1>Log in</h1>
-					<h4 th:text="${login_incorrecto}"></h4>
-					<h4 th:text="${mensaje_contrasenia}"></h4>
-					<h4 th:text="${mensaje_contrasenia2}"></h4>	
-					<h4 th:text="${mensaje_contrasenia3}"></h4>				
+					<h1>Ingresá tu mail y te enviaremos un correo de recuperación</h1>
+					<h2>(Revisa tu carpeta de spam)</h2>
+					<h4 th:text="${aviso_mail}"></h4>			
 				</div>
 			</div>
-			<form class="form-group" action="/procesar-login" method="POST">
+			<form class="form-group needs-validation" action="/recuperar-contraseña" method="POST">
 				<div class="col-lg-6 mx-auto text-center form-group"
 					id="bootstrap-override-col1">
 					<label id="label1">Mail:</label> <input class="form-control"
-						type="text" name="mail"></input>
+						type="text" name="mail" required></input>
 				</div>
-				<div class="col-lg-6 mx-auto text-center form-group"
-					id="bootstrap-override-col2">
-					<label id="label2">Contraseña:</label> <input class="form-control"
-						type="password" name="contrasenia"></input>
-				</div>
+			
 				<div>
 					<input class="btn btn-outline-light btn-lg" type="submit"
-						value="Iniciar Sesión"></input><br><br>
+						value="Enviar mail"></input><br><br>
 				</div>
-				<div>
-					<a class="btn btn-outline-light" href="/olvide-mi-contraseña">Olvide mi contraseña</a>
-				</div>
+				
 			</form>
 		</div>
 	</header>
