--- a/ArmaTuFecha/src/main/resources/templates/login.html
+++ b/ArmaTuFecha/src/main/resources/templates/login.html
@@ -82,7 +82,7 @@
 						value="Iniciar Sesión"></input><br><br>
 				</div>
 				<div>
-					<a class="btn btn-outline-light" href="/olvide-mi-contraseña">Olvide mi contraseña</a>
+					<a class="btn btn-outline-light" href="/olvide-mi-contrasenia">Olvide mi contraseña</a>
 				</div>
 			</form>
 		</div>
