--- a/ArmaTuFecha/src/main/resources/templates/recuperar-contrasenia.html
+++ b/ArmaTuFecha/src/main/resources/templates/recuperar-contrasenia.html
@@ -63,7 +63,7 @@
 					<h4 th:text="${aviso_mail}"></h4>			
 				</div>
 			</div>
-			<form class="form-group needs-validation" action="/recuperar-contraseña" method="POST">
+			<form class="form-group needs-validation" action="/recuperar-contrasenia" method="POST">
 				<div class="col-lg-6 mx-auto text-center form-group"
 					id="bootstrap-override-col1">
 					<label id="label1">Mail:</label> <input class="form-control"
