--- a/ArmaTuFecha/src/main/resources/templates/recuperar-contrasenia.html
+++ b/ArmaTuFecha/src/main/resources/templates/recuperar-contrasenia.html
@@ -24,7 +24,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 
 <!-- Custom JavaScript for this theme -->
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.compatibility.min.js.map"></script>
 <script src="/js/scrolling-nav.js"></script>
 <script src="/js/formulario.js"></script>
 <script src="/js/validacionform.js"></script>
