--- a/ArmaTuFecha/src/main/resources/templates/resultado-busqueda-musicos-genero.html
+++ b/ArmaTuFecha/src/main/resources/templates/resultado-busqueda-musicos-genero.html
@@ -104,7 +104,7 @@
 								<label>Mail:&nbsp; </label><label
 									th:text="${perfilMusico.mail_contacto}">Mail</label><br>
 									<label th:text="${perfilMusico.genero1}"
-									th:if="${perfilMusico.genero1 != null && perfilMusico.genero1 != ''}"></label> 
+									th:if="${perfilMusico.genero1 != null && perfilMusico.genero1 != ''}"></label><br> 
 									<a th:href="${perfilMusico.red_social1}"
 									th:if="${perfilMusico.red_social1 != null && perfilMusico.red_social1 != ''}"
 									th:text="${perfilMusico.red_social1}">Facebook</a><br>
@@ -122,7 +122,7 @@
 	<div class="pagination justify-content-center"
 		layout:fragment="~{paginacion}">
 
-		<button class="btn btn-outline-dark btn-lg">
+		<button class="btn btn-outline-dark btn-lg" th:if="${listadoMusicos.size()- 3 != 0}" >
 			<a th:href="'/musicos/busqueda-genero/procesar/'+ ${pagina+1} + '?busquedaGenero=' + ${busquedaGenero}">Más resultados </a>
 		</button>
 	</div>
