--- a/ArmaTuFecha/src/main/resources/templates/listado-musicos.html
+++ b/ArmaTuFecha/src/main/resources/templates/listado-musicos.html
@@ -163,7 +163,7 @@
 								<label>Mail:&nbsp; </label><label
 									th:text="${perfilMusico.mail_contacto}">Mail</label><br> 
 									<label th:text="${perfilMusico.genero1}"
-									th:if="${perfilMusico.genero1 != null && perfilMusico.genero1 != ''}"></label>
+									th:if="${perfilMusico.genero1 != null && perfilMusico.genero1 != ''}"></label><br>
 									<a th:href="${perfilMusico.red_social1}"
 									th:if="${perfilMusico.red_social1 != null && perfilMusico.red_social1 != ''}"
 									th:text="${perfilMusico.red_social1}">Facebook</a><br> <br>
