prueba mejora ruta edicion datos usuario

--- a/ArmaTuFecha/src/main/resources/templates/editar-datos-usuario.html
+++ b/ArmaTuFecha/src/main/resources/templates/editar-datos-usuario.html
@@ -39,7 +39,7 @@
 						<div class="alert alert-danger" role="alert"
 							th:text="${aviso_mail}" th:if="${aviso_mail}"></div>
 						<label>*Editar e-mail:&nbsp;</label><input class="form-control"
-							name="mail" type="email" th:value="${mailCargado}" required></input>
+							name="mail" type="email" th:value="${mail}" required></input>
 						<div class="invalid-feedback">Por favor completa este campo.</div>
 						<div class="valid-feedback"></div>
 						<br></br>
